# emoo-cli

./: .gitignore  AGENTS.md  CLAUDE.md  EMOO_OpenAPI_Documentation.md  README.md  emoo  pyproject.toml
src/: cli.py  client.py  config.py  errors.py  formatters.py
src/commands/: api.py  app.py  auth.py  base.py  chat.py  contact.py  data.py  endpoints.json  message.py  schema_cmd.py  skill.py
src/skills/: SKILL.md  __init__.py  analyze.py  emoo-analyze.md  emoo-install.md  emoo-search-guide.md  intent.py  knowledge_map.py  loader.py  registry.py  runner.py  search.py  search_guide.md
src/skills/examples/: __init__.py  app-filter.md  employee-search.md  item-analysis.md  policy-search.md  store-revenue.md  time-filter.md
